--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,19 @@
 .li_ext_wrap {
-  padding:10px;
+
 }
 
 a.li_ext_icon {
-  text-decoration:none !important;
+  text-decoration:none;
+  border:none;
+  display:none;
+}
+
+a.li_ext_icon:hover{
+  text-decoration:none;
+  border:none;
+}
+
+a.li_ext_icon img{
+  vertical-align:middle;
+  padding-left:5px;
 }
