--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,31 @@
-.li_ext_wrap {
-
+span.li_ext_wrap {
+  position:relative;
 }
 
-a.li_ext_icon {
+span.li_ext_wrap a.li_ext_icon {
   text-decoration:none;
   border:none;
   display:none;
 }
 
-a.li_ext_icon:hover{
+span.li_ext_wrap a.li_ext_icon:hover{
   text-decoration:none;
   border:none;
 }
 
-a.li_ext_icon img{
+span.li_ext_wrap a.li_ext_icon img{
   vertical-align:middle;
   padding-left:5px;
+}
+
+div.li_ext_popup {
+  width:150px;
+  top:-120px;
+  left:160px;
+  position:absolute;
+  border:1px solid gray;
+  background:#000;
+  color:#fff;
+  opacity:0.9;
+  display:none;
 }
